--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,8 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="AConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\NORTHWND.mdf;Integrated Security=True;Encrypt=False"
-			  providerName="Microsoft.Data.SqlClient" />
+		<add name="AConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\STARCONCERT.mdf;Integrated Security=True;Encrypt=False"
+	  providerName="Microsoft.Data.SqlClient" />
 	</connectionStrings> 
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
