--- a/ConcertTicketing.csproj
+++ b/ConcertTicketing.csproj
@@ -134,6 +134,7 @@
     <Content Include="Images\Venue1.jpeg" />
     <Content Include="Images\visa.png" />
     <Content Include="Images\WhatsApp Image 2024-12-30 at 01.35.19_a880b0c6.jpg" />
+    <Content Include="Payment.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -149,6 +150,13 @@
     </Compile>
     <Compile Include="CustomerMaster.Master.designer.cs">
       <DependentUpon>CustomerMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Payment.aspx.cs">
+      <DependentUpon>Payment.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Payment.aspx.designer.cs">
+      <DependentUpon>Payment.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
