added global and login page

--- a/ConcertTicketing.csproj
+++ b/ConcertTicketing.csproj
@@ -71,6 +71,7 @@
     <Content Include="App_Data\STARCONCERT.MDF" />
     <Content Include="Design\MasterDeisgn.css" />
     <Content Include="Design\Register.css" />
+    <Content Include="Global.asax" />
     <Content Include="Images\133604343841684229.jpg" />
     <Content Include="Images\272750568_3217694141889029_3866376742898613197_n.jpg" />
     <Content Include="Images\275073240_329766082466790_6972892228753778446_n.png" />
@@ -135,6 +136,7 @@
     <Content Include="Images\Venue1.jpeg" />
     <Content Include="Images\visa.png" />
     <Content Include="Images\WhatsApp Image 2024-12-30 at 01.35.19_a880b0c6.jpg" />
+    <Content Include="LoginPage.aspx" />
     <Content Include="Payment.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Web.config" />
@@ -153,6 +155,16 @@
     </Compile>
     <Compile Include="CustomerMaster.Master.designer.cs">
       <DependentUpon>CustomerMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="LoginPage.aspx.cs">
+      <DependentUpon>LoginPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="LoginPage.aspx.designer.cs">
+      <DependentUpon>LoginPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Payment.aspx.cs">
       <DependentUpon>Payment.aspx</DependentUpon>
