--- a/ConcertTicketing.csproj
+++ b/ConcertTicketing.csproj
@@ -71,6 +71,7 @@
     <Content Include="App_Data\STARCONCERT.MDF" />
     <Content Include="ConcertTicket.aspx" />
     <Content Include="ConcertTicket.css" />
+    <Content Include="Design\AdminSite.css" />
     <Content Include="Design\MasterDeisgn.css" />
     <Content Include="Design\Register.css" />
     <Content Include="Images\133604343841684229.jpg" />
