--- a/ConcertTicketing.csproj
+++ b/ConcertTicketing.csproj
@@ -143,6 +143,12 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminMaster.Master.cs">
+      <DependentUpon>AdminMaster.Master</DependentUpon>
+    </Compile>
+    <Compile Include="AdminMaster.Master.designer.cs">
+      <DependentUpon>AdminMaster.Master</DependentUpon>
+    </Compile>
     <Compile Include="AdminSite.aspx.cs">
       <DependentUpon>AdminSite.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -182,6 +188,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CustomerMaster.Master" />
+    <Content Include="AdminMaster.Master" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
