--- a/ConcertTicketing.csproj
+++ b/ConcertTicketing.csproj
@@ -140,6 +140,7 @@
     <Content Include="Images\visa.png" />
     <Content Include="Images\WhatsApp Image 2024-12-30 at 01.35.19_a880b0c6.jpg" />
     <Content Include="LoginPage.aspx" />
+    <Content Include="NewsForm.aspx" />
     <Content Include="Payment.aspx" />
     <Content Include="Register.aspx" />
     <Content Include="Web.config" />
@@ -181,6 +182,13 @@
     </Compile>
     <Compile Include="LoginPage.aspx.designer.cs">
       <DependentUpon>LoginPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="NewsForm.aspx.cs">
+      <DependentUpon>NewsForm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NewsForm.aspx.designer.cs">
+      <DependentUpon>NewsForm.aspx</DependentUpon>
     </Compile>
     <Compile Include="Payment.aspx.cs">
       <DependentUpon>Payment.aspx</DependentUpon>
