--- a/ConcertTicketing.csproj
+++ b/ConcertTicketing.csproj
@@ -70,6 +70,7 @@
       <DependentUpon>STARCONCERT.MDF</DependentUpon>
     </Content>
     <Content Include="Booking.aspx" />
+    <Content Include="Cart.aspx" />
     <Content Include="ConcertTicket.aspx" />
     <Content Include="ConcertTicket.css" />
     <Content Include="CreateEvent.aspx" />
@@ -169,6 +170,13 @@
     </Compile>
     <Compile Include="Booking.aspx.designer.cs">
       <DependentUpon>Booking.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Cart.aspx.cs">
+      <DependentUpon>Cart.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Cart.aspx.designer.cs">
+      <DependentUpon>Cart.aspx</DependentUpon>
     </Compile>
     <Compile Include="ConcertTicket.aspx.cs">
       <DependentUpon>ConcertTicket.aspx</DependentUpon>
